added replaced bird with pug

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title> Crappy Bird </title>
+    <title> Jumpy Pug </title>
     <script type="text/javascript" src="phaser.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Crafty+Girls|Luckiest+Guy' rel='stylesheet' type='text/css'>
 </head>
 <body>
- <p> Press the spacebar to jump </p>
+  <h1 style='font-family: "Crafty Girls", cursive;'>Jumpy
+  <span style='font-family: "Luckiest Guy", cursive;'>Pug</span></h1>
+  <p style='font-family: "Crafty Girls", cursive;' > Press the spacebar to jump </p>
     <div id="gameDiv"> </div>
 </body>
 </html>
